[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
inwx = { version = "0.1.0", git = "https://github.com/HimbeerserverDE/inwx-rs.git" }
ipnet = "2.5.0"
linkaddrs = { version = "0.1.0", git = "https://github.com/HimbeerserverDE/linkaddrs.git" }
serde = "1.0"
serde_json = { version = "1.0", features = ["std"] }
thiserror = "1.0"
trust-dns-resolver = "0.23.0"
